--- a/index.html
+++ b/index.html
@@ -1,5 +1,53 @@
 <html>
+    <head>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Parisienne&display=swap" rel="stylesheet">
+
+        <style>
+            body {
+                background-color: #000;
+                color: #e3dfcc;
+                font-family: "Open Sans", sans-serif;
+                font-weight: 300;
+                position: relative;
+            }
+
+            .center {
+                text-align: center;
+                height: 425px;
+                margin-top: 200px
+            }
+
+            .center h1 {
+                font-size: 42px;
+                font-weight: 300
+            }
+
+            .brand {
+                display: inline-block;
+                width: 360px;
+            }
+
+            .brand img {
+                max-width: 100%;
+            }
+
+            a {
+                color: inherit;
+            }
+        </style>
+    </head>
     <body>
-        <p>Deploy</p>
+        <main>
+            <div class="center">
+                <div class="brand">
+                    <img src="assets/images/logo-main.webp"/>
+                </div>
+                <h1>We're on our way!</h1>
+                <p>We are currently undergoing routine site maintenance, and will return shrotly.</p>
+                <p>In the meantime please direct your inquiries to <a href="mailto:crystallakebanquets@gmail.com">crystallakebanquets@gmail.com</a>.</p>
+            </div>
+        </main>
     </body>
 </html>
